--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,6 @@
   "SHOW": "Показать",
   "MAINE": "Основная",
   "ABOUT_US": "О нас",
-  "LANGUAGE": "Русский"
+  "LANGUAGE": "Русский",
+  "LOADING": "Загрузка"
 }
