added NotFound page and loader

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,6 @@
   "MAINE": "Maine",
   "ABOUT_US": "About us",
   "LANGUAGE": "English",
-  "LOADING": 'Loading',
+  "LOADING": "Loading",
+  "NOT_FOUND": "Page not found"
 }
