--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,6 @@
   "MAINE": "Основная",
   "ABOUT_US": "О нас",
   "LANGUAGE": "Русский",
-  "LOADING": "Загрузка"
+  "LOADING": "Загрузка",
+  "NOT_FOUND": "Страница не найдена"
 }
