--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,6 @@
   "ABOUT_US": "About us",
   "LANGUAGE": "English",
   "LOADING": "Loading",
-  "NOT_FOUND": "Page not found"
+  "NOT_FOUND": "Page not found",
+  "ERROR": "Error"
 }
