--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,5 +4,6 @@
   "ABOUT_US": "О нас",
   "LANGUAGE": "Русский",
   "LOADING": "Загрузка",
-  "NOT_FOUND": "Страница не найдена"
+  "NOT_FOUND": "Страница не найдена",
+  "ERROR": "Ошибка"
 }
