--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,5 +11,7 @@
   "Главная": "Main",
   "О сайте": "About us",
   "TOOGLE": "TOOGLE",
-  "TOGGLE": "TOGGLE"
+  "TOGGLE": "TOGGLE",
+  "inc": "inc",
+  "dec": "dec"
 }
