Added profile database and enabled strict mode in ts

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,5 +17,6 @@
   "AUTH_FORM": "Форма входа",
   "INCORRECT_DATA": "Неправильные данные",
   "LOGOUT": "Выйти",
-  "PROFILE": "Профиль"
+  "PROFILE": "Профиль",
+  "FIRST_NAME": "FIRST_NAME"
 }
