--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,5 +17,6 @@
   "AUTH_FORM": "Auth form",
   "INCORRECT_DATA": "Incorrect data",
   "LOGOUT": "Logout",
-  "PROFILE": "Profile"
+  "PROFILE": "Profile",
+  "FIRST_NAME": "FIRST_NAME"
 }
