--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -18,5 +18,6 @@
   "INCORRECT_DATA": "Incorrect data",
   "LOGOUT": "Logout",
   "PROFILE": "Profile",
-  "FIRST_NAME": "FIRST_NAME"
+  "FIRST_NAME": "FIRST_NAME",
+  "CANCEL": "CANCEL"
 }
