semi add edit profile

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,5 +19,6 @@
   "LOGOUT": "Logout",
   "PROFILE": "Profile",
   "FIRST_NAME": "FIRST_NAME",
-  "CANCEL": "CANCEL"
+  "CANCEL": "CANCEL",
+  "SAVE": "SAVE"
 }
