--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -19,5 +19,6 @@
   "LOGOUT": "Выйти",
   "PROFILE": "Профиль",
   "FIRST_NAME": "FIRST_NAME",
-  "CANCEL": "CANCEL"
+  "CANCEL": "CANCEL",
+  "SAVE": "SAVE"
 }
